--- a/_posts/2023-10-21-post-tip-02.md
+++ b/_posts/2023-10-21-post-tip-02.md
@@ -1,5 +1,5 @@
 ---
-title: 🥜 로컬환경에서 포스팅 테스트하기
+title: 🥜 [Jekyll] 로컬환경에서 포스팅 테스트하기
 date: 2023-10-21 20:52:00 +0800
 categories: [Tips, Post]
 tags: [Tip, 작성법, 글쓰기]
