--- a/_posts/2023-10-24-study-sql-01.md
+++ b/_posts/2023-10-24-study-sql-01.md
@@ -1,12 +1,17 @@
 ---
-title: 🌰 SQL 노트정리
+title: 🌰 [Oracle] SQL 노트정리
 date: 2023-11-01 13:44:00 +0800
-categories: [Study, SQL]
+categories: [Study, Database]
 tags: [Study, SQL, SQLD, 자격증]
 toc: true
 ---
 
 > 이 문서는 SQLD 시험 공부를 위한 노트정리 입니다.
+>
+> ~~시험 열심히 준비하자~~
+>
+> _제 51회 SQLD 자격증 취득 완료 (23.12)_
+
 
 ## SQL 이란?
 
