--- a/_posts/2023-10-10-post-tip-03.md
+++ b/_posts/2023-10-10-post-tip-03.md
@@ -1,5 +1,5 @@
 ---
-title: 🥜 jekyll-theme-chirpy contents 오류 해결하기
+title: 🥜 [Jekyll] jekyll-theme-chirpy contents 오류 해결하기
 date: 2023-10-10 15:12:00 +0800
 categories: [Tips, Post]
 tags: [Tip, 작성법, 글쓰기]
