--- a/_posts/2023-07-03-talks-diary-01.md
+++ b/_posts/2023-07-03-talks-diary-01.md
@@ -3,7 +3,7 @@ title: 🥜 블로그 시작
 date: 2023-07-03 19:48:00 +0800
 categories: [Talks, Diary]
 tags: [Diary, 글쓰기]
-pin: true
+# pin: true
 ---
 
 어쩌다보니 블로그를 개설하게 되었다.
