--- a/_posts/2023-07-08-post-tip-01.md
+++ b/_posts/2023-07-08-post-tip-01.md
@@ -3,7 +3,7 @@ title: 🥜 글 작성 팁
 date: 2023-07-08 21:08:00 +0800
 categories: [Tips, Post]
 tags: [Tip, 작성법, 글쓰기]
-pin: true
+# pin: true
 ---
 
 > 본 포스팅에서는 아래 내용에 대해 소개합니다.
