--- a/_posts/2023-10-11-learn-react-01.md
+++ b/_posts/2023-10-11-learn-react-01.md
@@ -1,7 +1,7 @@
 ---
 title: 🌰 [React] react-hook-form 을 사용해 중복 체크하기
 date: 2023-10-11 16:33:00 +0800
-categories: [Study, Frontend]
+categories: [Frontend, React]
 tags: [React, react-router-dom, Frontend]
 ---
 
