--- a/_posts/2023-10-22-learn-react-02.md
+++ b/_posts/2023-10-22-learn-react-02.md
@@ -1,7 +1,7 @@
 ---
 title: 🥜 [React] 상태관리 라이브러리 비교하기 (ContextAPI, Redux, Recoil, Zustand)
 date: 2023-10-22 13:40:00 +0800
-categories: [Study, Frontend]
+categories: [Frontend, React]
 tags: [React, ContextAPI, Redux, Recoil, Zustand, Frontend]
 ---
 
