--- a/_posts/2023-10-24-study-sql-01.md
+++ b/_posts/2023-10-24-study-sql-01.md
@@ -1,7 +1,7 @@
 ---
 title: 🌰 [Oracle] SQL 노트정리
 date: 2023-11-01 13:44:00 +0800
-categories: [Study, Database]
+categories: [Database, Oracle]
 tags: [Study, SQL, SQLD, 자격증]
 toc: true
 ---
