--- a/_posts/2024-04-06-post-tip-06.md
+++ b/_posts/2024-04-06-post-tip-06.md
@@ -13,6 +13,17 @@ _(GDSC Kprintf)_
 >
 > 작성 된 포스트 입니다.
 
+## 개요
+
+요즘들어 면접 질문을 준비하다보면 기술 면접 외에도 CS 관련 면접도 많아진 추세이다.
+
+~~전공학점만 높으면 되는거 아냐?~~ 라는
+
+얄팍했던 내 자신을 한심하게 생각하며 눈물의 포스팅을 남긴다...
+
+<br/>
+<hr/>
+
 
 ## CS 는 왜 해야 할까?
 
