--- a/_posts/2024-04-06-post-tip-05.md
+++ b/_posts/2024-04-06-post-tip-05.md
@@ -13,6 +13,18 @@ _(GDSC Kprintf)_
 >
 > 작성 된 포스트 입니다.
 
+## 개요
+
+한창 프로젝트를 만들다보면 난관에 봉착하게 되는데
+
+첫 번째로 돌아는가는데 쓰레기장 코드인경우
+
+두 번째로 돌아가진 않는데 구조를 이쁘게 짠 경우이다.
+
+둘 다 정말 거지같은 경우이지만 해당 상황을 어떻게 이겨나가야 하는지
+
+개선방안과 관점 변화를 받은 내용이라 포스팅 해볼까 한다.
+
 
 ## 소프트웨어 아키텍쳐란?
 
